# flappybirdclone

./: .gitignore  Cargo.toml  Makefile  README.MD
flappybird/flappybird/: binding.h  main.m
flappybird/flappybird.xcodeproj/: project.pbxproj
flappybird/flappybird.xcodeproj/project.xcworkspace/xcuserdata/dustin.xcuserdatad/: UserInterfaceState.xcuserstate
flappybird/flappybird.xcodeproj/xcuserdata/dustin.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: lib.rs  main.rs
src/game/: mod.rs  systems.rs
src/pipe/: components.rs  mod.rs  resources.rs  systems.rs
src/player/: components.rs  mod.rs  resources.rs  systems.rs
src/score/: components.rs  mod.rs  resources.rs  systems.rs
src/sounds/: mod.rs
src/ui/: components.rs  mod.rs  systems.rs
src/world/: components.rs  mod.rs  systems.rs
