[package]
name = "flappybird"
version = "0.1.0"
edition = "2021"
description = "The Flappy Bird Clone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flappybird"
#path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[[bin]]
name = "flappybird"
path = "src/main.rs"


[package.metadata.bundle]
name = "flappybird"
identifier = "com.github.an0nn30"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
resources = ["assets"]
copyright = "MIT License"
category = "Game"
short_description = "The Flappy Bird clone in Rust with Bevy!"
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
osx_frameworks = ["SDL2"]
osx_url_schemes = ["com.github.an0nn30"]


[dependencies]
bevy = "0.11.3"
rand = "0.8.5"
bevy_rapier2d = {  version = "0.22.0", features = [ "simd-stable", "debug-render-2d" ] }
log = "0.4.20"
bevy_editor_pls = "0.5.0"
bevy_embedded_assets = "0.8.0"
